<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vicke.mytictactoe.Category">

    <RelativeLayout
        android:layout_width="434dp"
        android:layout_height="620dp"
        android:background="@drawable/secondbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btnVsPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnVsComputer"
            android:layout_alignBottom="@+id/btnVsComputer"
            android:layout_marginEnd="41dp"
            android:layout_marginRight="41dp"
            android:layout_toLeftOf="@+id/btnVsComputer"
            android:layout_toStartOf="@+id/btnVsComputer"
            android:text="@string/playerVplayer" />

        <Button
            android:id="@+id/btnVsComputer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            android:text="@string/computerVplayer" />

        <Button
            android:id="@+id/btnMenuCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/mainMenu" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
