<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vicke.mytictactoe.howTo">

    <RelativeLayout
        android:layout_width="450dp"
        android:layout_height="717dp"
        android:background="@drawable/secondbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83">

        <Button
            android:id="@+id/btnMenuCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="36dp"
            android:layout_toEndOf="@+id/imageView4"
            android:layout_toRightOf="@+id/imageView4"
            android:text="@string/mainMenu" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView5"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            app:srcCompat="@drawable/diagwin" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView2"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_toEndOf="@+id/imageView2"
            android:layout_toRightOf="@+id/imageView2"
            app:srcCompat="@drawable/horizonwin" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView4"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/imageView4"
            android:layout_toRightOf="@+id/imageView4"
            app:srcCompat="@drawable/vertiwin" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView4"
            android:layout_alignStart="@+id/imageView4"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/hownotwin" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView6"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="200dp"
            android:text="@string/howWin"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btnMenuCat"
            android:layout_alignRight="@+id/btnMenuCat"
            android:layout_below="@+id/imageView4"
            android:layout_marginEnd="53dp"
            android:layout_marginRight="53dp"
            android:layout_marginTop="44dp"
            android:text="@string/howNotWin"
            android:textSize="30sp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
